--- a/versions.properties
+++ b/versions.properties
@@ -72,6 +72,15 @@ version.androidx.test.ext.junit=1.1.5
 ##                  # available=1.2.0-alpha02
 ##                  # available=1.2.0-alpha03
 
+version.androidx.test.runner=1.5.2
+##               # available=1.5.3-alpha01
+##               # available=1.6.0-alpha01
+##               # available=1.6.0-alpha02
+##               # available=1.6.0-alpha03
+##               # available=1.6.0-alpha04
+##               # available=1.6.0-alpha05
+##               # available=1.6.0-alpha06
+
 version.androidx.wear.compose=1.3.0
 ##                # available=1.4.0-alpha01
 
@@ -86,6 +95,8 @@ version.google.android.play-services-wearable=18.1.0
 version.junit.junit=4.13.2
 
 version.kotlin=1.9.22
+
+version.robolectric=4.11.1
 
 version.splitties=3.0.0
 ##    # available=3.1.0-SNAPSHOT
