Make sure the roborazzi version is centralized

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,3 +1,7 @@
+[plugins]
+
+roborazzi = { id = "io.github.takahirom.roborazzi", version.ref = "roborazzi" }
+
 [versions]
 composeOClock = "0.1.0-SNAPSHOT"
 roborazzi = "1.10.1"
