--- a/.github/workflows/fix_workflow.yaml
+++ b/.github/workflows/fix_workflow.yaml
@@ -39,3 +39,10 @@ jobs:
       uses: 'gradle/gradle-build-action@v3'
       with:
         arguments: 'recordRoborazziDebug'
+    - id: 'step-3'
+      name: 'Commit Screenshots'
+      uses: 'stefanzweifel/git-auto-commit-action@v5'
+      with:
+        commit_message: '🤖 Updates screenshots'
+        file_pattern: '**/src/test/screenshots/*.png'
+        disable_globbing: 'true'
