--- a/.github/workflows/build_workflow.yaml
+++ b/.github/workflows/build_workflow.yaml
@@ -35,7 +35,7 @@ jobs:
       uses: 'actions/setup-java@v4'
       with:
         java-version: '17'
-        distribution: 'adopt'
+        distribution: 'temurin'
     - id: 'step-2'
       name: 'Build'
       uses: 'gradle/gradle-build-action@v3'
