Switch java distribution for GitHub Actions setup-java

--- a/.github/workflows/fix_workflow.yaml
+++ b/.github/workflows/fix_workflow.yaml
@@ -33,7 +33,7 @@ jobs:
       uses: 'actions/setup-java@v4'
       with:
         java-version: '17'
-        distribution: 'adopt'
+        distribution: 'temurin'
     - id: 'step-2'
       name: 'Record Screenshots'
       uses: 'gradle/gradle-build-action@v3'
