--- a/.github/workflows/build_workflow.yaml
+++ b/.github/workflows/build_workflow.yaml
@@ -48,3 +48,4 @@ jobs:
         name: 'Roborazzi'
         path: 'shared/build/outputs/roborazzi'
         retention-days: '0'
+      if: 'always()'
