--- a/.github/workflows/fix_workflow.yaml
+++ b/.github/workflows/fix_workflow.yaml
@@ -23,7 +23,7 @@ jobs:
     runs-on: 'ubuntu-latest'
     needs:
     - 'check_yaml_consistency'
-    if: 'github.ref_name != github.event.repository.default_branch'
+    if: '${{ github.ref_name != github.event.repository.default_branch }}'
     steps:
     - id: 'step-0'
       name: 'Check out'
