--- a/.github/workflows/build_workflow.yaml
+++ b/.github/workflows/build_workflow.yaml
@@ -51,7 +51,7 @@ jobs:
       if: '${{ always() }}'
     - id: 'step-4'
       name: 'Upload test reports'
-      uses: 'dorny/test-reporter@1.8.0'
+      uses: 'dorny/test-reporter@v1.8.0'
       with:
         path: '**/build/test-results/test/TEST-*.xml'
         reporter: 'java-junit'
