--- a/.github/workflows/build_workflow.yaml
+++ b/.github/workflows/build_workflow.yaml
@@ -53,6 +53,7 @@ jobs:
       name: 'Upload test reports'
       uses: 'dorny/test-reporter@v1.8.0'
       with:
+        name: 'Junit results'
         path: '**/build/test-results/test/TEST-*.xml'
         reporter: 'java-junit'
       if: '${{ failure() }}'
