--- a/.github/workflows/fix_workflow.yaml
+++ b/.github/workflows/fix_workflow.yaml
@@ -1,13 +1,10 @@
-# This file was generated using Kotlin DSL (.github/workflows/build_workflow.main.kts).
+# This file was generated using Kotlin DSL (.github/workflows/fix_workflow.main.kts).
 # If you want to modify the workflow, please change the Kotlin file and regenerate this YAML file.
 # Generated with https://github.com/typesafegithub/github-workflows-kt
 
-name: 'Build workflow'
+name: 'Fix workflow'
 on:
-  push:
-    branches:
-    - 'main'
-  pull_request: {}
+  workflow_dispatch: {}
 jobs:
   check_yaml_consistency:
     name: 'Check YAML consistency'
@@ -18,14 +15,15 @@ jobs:
       uses: 'actions/checkout@v4'
     - id: 'step-1'
       name: 'Execute script'
-      run: 'rm ''.github/workflows/build_workflow.yaml'' && ''.github/workflows/build_workflow.main.kts'''
+      run: 'rm ''.github/workflows/fix_workflow.yaml'' && ''.github/workflows/fix_workflow.main.kts'''
     - id: 'step-2'
       name: 'Consistency check'
-      run: 'git diff --exit-code ''.github/workflows/build_workflow.yaml'''
-  build-and-test:
+      run: 'git diff --exit-code ''.github/workflows/fix_workflow.yaml'''
+  fix-branch:
     runs-on: 'ubuntu-latest'
     needs:
     - 'check_yaml_consistency'
+    if: '${{ github.ref_name != github.event.repository.default_branch }}'
     steps:
     - id: 'step-0'
       name: 'Check out'
@@ -37,23 +35,14 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
     - id: 'step-2'
-      name: 'Build'
+      name: 'Record Screenshots'
       uses: 'gradle/gradle-build-action@v3'
       with:
-        arguments: 'test'
+        arguments: 'verifyAndRecordRoborazziDebug'
     - id: 'step-3'
-      name: 'Upload reports'
-      uses: 'actions/upload-artifact@v4'
+      name: 'Commit Screenshots'
+      uses: 'stefanzweifel/git-auto-commit-action@v5'
       with:
-        name: 'Roborazzi'
-        path: 'shared/build/outputs/roborazzi'
-        retention-days: '0'
-      if: '${{ always() }}'
-    - id: 'step-4'
-      name: 'Upload test reports'
-      uses: 'actions/upload-artifact@v4'
-      with:
-        name: 'Junit'
-        path: '**/build/reports/tests'
-        retention-days: '0'
-      if: '${{ always() }}'
+        commit_message: '🤖 Updates screenshots'
+        file_pattern: '**/src/test/screenshots/*.png'
+        disable_globbing: 'true'
