--- a/versions.properties
+++ b/versions.properties
@@ -19,6 +19,8 @@ version.androidx.activity=1.8.2
 ##            # available=1.9.0-alpha01
 ##            # available=1.9.0-alpha02
 
+version.androidx.benchmark=1.3.0-alpha01
+
 version.androidx.compose=2023.10.01
 
 version.androidx.compose.compiler=1.5.8
@@ -72,6 +74,11 @@ version.androidx.test.ext.junit=1.1.5
 ##                  # available=1.2.0-alpha02
 ##                  # available=1.2.0-alpha03
 
+version.androidx.test.rules=1.5.0
+##              # available=1.6.0-alpha01
+##              # available=1.6.0-alpha02
+##              # available=1.6.0-alpha03
+
 version.androidx.test.runner=1.5.2
 ##               # available=1.5.3-alpha01
 ##               # available=1.6.0-alpha01
@@ -80,6 +87,8 @@ version.androidx.test.runner=1.5.2
 ##               # available=1.6.0-alpha04
 ##               # available=1.6.0-alpha05
 ##               # available=1.6.0-alpha06
+
+version.androidx.test.uiautomator=2.3.0
 
 version.androidx.wear.compose=1.3.0
 ##                # available=1.4.0-alpha01
